--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.199",
     "@types/woocommerce__woocommerce-rest-api": "^1.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
